changed file name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Vacation</title>
-		<link rel="stylesheet" type="text/css" href="finalProject.css">
+		<link rel="stylesheet" type="text/css" href="FinalProject.css">
 	</head>
 	<body>
 		<div id="places-been">Places I've Been
